# dev-log

./: .gitignore  LICENSE  README.md  docker-compose.yaml
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0df7623d4dd4_auto_migration.py  0ee40b960e48_auto_migration.py  310bda8a35c4_add_test_column_to_users.py  33bca4973613_auto_migration.py  3bae71a673ec_auto_migration.py  9e709d526a14_create_posts_table.py  ce97f3c4f496_auto_migration.py  de82b7d46d41_auto_migration.py  f369c2f04223_create_posts_table.py
backend/app/: database.py  main.py
backend/app/dependencies/: auth.py  user.py
backend/app/models/: __init__.py  post.py  user.py
backend/app/routers/: auth.py  post.py  user.py
backend/app/schemas/: auth.py  post.py  user.py
backend/app/services/: base_service.py  post_service.py  user_service.py
backend/app/utils/: jwt.py
backend/scripts/: db_migrate.sh
backend/tests/: conftest.py
backend/tests/test_routers/: test_auth_router.py  test_post_router.py  test_user_router.py
frontend/: Dockerfile  package.json
frontend/src/: App.jsx  index.js
frontend/src/api/: axios.js  posts.js
frontend/src/components/: Navigation.jsx  PostForm.jsx  PostList.jsx
frontend/src/components/common/: Pagination.jsx
frontend/src/components/post/: PostForm.jsx  PostList.jsx
frontend/src/components/user/: UserForm.jsx  (+1 more)
frontend/src/pages/: LoginPage.jsx  PostCreatePage.jsx  PostDetailPage.jsx  PostPage.jsx  UserPage.jsx
frontend/src/styles/: App.css  LoginPage.css  Navigation.css  PostList.css  PostPage.css
frontend/src/utils/: paginationUtils.js
(+11 files in other folders)
